--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1435,3 +1435,275 @@ footer {
     left: 0;
     width: 100%;
 }
+
+/************************afeng**********************/
+.homeRight{
+	position: absolute; 
+	bottom: -51px; right: -108px; height: 350px; width: 480px; 
+	background-image: url(../images/sanjiaoxing385x300.png); 
+	background-repeat: no-repeat; z-index:0;display:none;
+}
+.anniuHome{
+	width: 100px; height: 80px;
+	cursor: pointer; position: absolute; bottom: -13px; right: -10px; 
+	background-image: url(../images/zhuyeanniu_huise.png); 
+	background-repeat: no-repeat; z-index: 100;
+}
+.anniuHome:hover{
+	background-image: url(../images/zhuyeanniu_huangse.png); 
+}
+.home_div{
+	position:relative;
+	left:18px;
+	width:92%;
+	height:100%;
+	font-family:'微软雅黑';
+}
+.系统信息{
+	cursor: pointer;width: 100px; height: 100px;
+	background-image: url(../images/xitongshezhi_huise.png);
+}
+.系统信息:hover{
+	background-image: url(../images/xitongshezhi_huangse.png);
+}
+.xtsz_home{
+	width: 500px; 
+	height: 100px; 
+	position: absolute; 
+	bottom: 480px; 
+	left:-82px;
+}
+.xtsz_id_{
+	position: absolute;
+	z-index:999;
+	width:500px;
+	height:500px;
+	display:none;
+	widh:500px;
+	height:500px;
+	background-color: #fff;
+}
+.用户信息{
+	cursor: pointer;width: 100px; height: 100px;
+	background-image: url(../images/yonghushezhi_huise.png);
+}
+.用户信息:hover{
+	background-image: url(../images/yonghushezhi_huangse.png);
+}
+.yhsz_home{
+	width: 500px; 
+	height: 100px; 
+	position: absolute; 
+	bottom: 325px; 
+	left:-82px;
+}
+.yhsz_id_{
+	position: absolute; 
+	z-index:999;
+	width:500px;
+	height:500px;
+	display:none;
+	widh:500px;
+	height:500px;
+	background-color: #fff;
+}
+.h_div_mo_img_close{
+	position: relative; height: 67px; width: 100%;
+	background-image: url(../images/heitiao.png); 
+	background-repeat: no-repeat; 
+	background-position: -4 -2
+}
+.div_mo_img_close{
+	cursor: pointer; position: absolute;
+	top: 0px; left: 45px; width: 67px; height: 63px;z-index:1000;
+}
+.订单调度{
+	width: 66px; height: 50px; 
+	cursor: pointer; position: relative; top: 245px; left: 59px; 
+	background-image: url(../images/wuliaodiaodu66x55_huise.png); 
+	background-repeat: no-repeat;
+}
+.订单调度:hover{
+	background-image: url(../images/wuliaodiaodu66x55_huangse.png); 
+}
+.主页信息{
+	width: 66px; height: 50px; 
+	cursor: pointer; position: relative; top: 153px; left: 118px; 
+	background-image: url(../images/xinxiguanli66x55_huise.png); 
+	background-repeat: no-repeat;
+}
+.主页信息:hover{
+	background-image: url(../images/xinxiguanli66x55_huangse.png); 
+}
+.PLC{
+	width: 66px; height: 50px; 
+	cursor: pointer; position: relative; top: 58px; left: 174px; 
+	background-image: url(../images/dingdanguanli66x55_huise.png); 
+	background-repeat: no-repeat;
+}
+.PLC:hover{
+	background-image: url(../images/dingdanguanli66x55_huangse.png); 
+}
+.库房操作{
+	width: 75px; height: 50px;
+	cursor: pointer; position: relative; top: -40px; left: 228px; 
+	background-image: url(../images/kufangcaozuo66x55_huise.png); 
+	background-repeat: no-repeat;
+}
+.库房操作:hover{
+	background-image: url(../images/kufangcaozuo66x50_huangse.png); 
+}
+.基础设置{
+	width: 66px; height: 53px; 
+	cursor: pointer; position: relative; top: -130px; left: 285px; 
+	background-image: url(../images/shezhizhongxin66x55_huise.png); 
+	background-repeat: no-repeat;
+}
+.基础设置:hover{
+	background-image: url(../images/shezhizhongxin66x55_huangse.png); 
+}
+.shusongxian{
+	margin-left:3px;
+	width:50px;
+	line-height:30.5px;
+	font-size:15px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.huancunku{
+	margin-left:3px;
+	width:50px;
+	line-height:61.5px;
+	font-size:15px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.head_hui{
+	text-align: center;
+	float:left;
+	margin-left:3px;
+	height:45px;
+	width:50px;
+	color:#000000;
+	font-size:15px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.head_lan{
+	text-align: center;
+	margin-left:3px;
+	height:45px;
+	width:50px;
+	float:left;
+	color:#ffffff;
+	font-size:15px;
+	background-color:rgb( 75 , 176 , 249 );
+}
+.hui{
+	text-align: center;
+	margin-left:3px;
+	line-height:45px;
+	height:45px;
+	width:50px;
+	float:left;
+	color:#000000;
+	font-size:15px;
+	background-color:rgb( 234 , 234 , 234 );
+}
+.kf_shusongxian{
+	margin-left:3px;
+	width:40px;
+	line-height:22px;
+	font-size:12px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.kf_shengjiangtai{
+	margin-left:3px;
+	width:40px;
+	line-height:34px;
+	font-size:12px;
+	color:#000000;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.kf_head_hui{
+	text-align: center;
+	float:left;
+	margin-left:3px;
+	line-height:33px;
+	height:33px;
+	width:40px;
+	color:#000000;
+	font-size:12px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.kf_hui{
+	text-align: center;
+	margin-left:3px;
+	line-height:33px;
+	height:33px;
+	width:40px;
+	float:left;
+	color:#000000;
+	font-size:12px;
+	cursor:pointer;
+	background-color:rgb( 234 , 234 , 234 );
+}
+.kf_lan{
+	text-align: center;
+	margin-left:3px;
+	line-height:33px;
+	height:33px;
+	width:40px;
+	float:left;
+	color:#ffffff;
+	font-size:12px;
+	cursor:pointer;
+	background-color:rgb( 75 , 176 , 249 );
+}
+.kf_lv{
+	text-align: center;
+	margin-left:3px;
+	line-height:33px;
+	height:33px;
+	width:40px;
+	float:left;
+	color:#ffffff;
+	font-size:12px;
+	cursor:pointer;
+	background-color:rgb( 146 , 208 , 80 );
+}
+.lan{
+	text-align: center;
+	margin-left:3px;
+	line-height:45px;
+	height:45px;
+	width:50px;
+	float:left;
+	color:#ffffff;
+	font-size:15px;
+	background-color:rgb( 75 , 176 , 249 );
+}
+.qfgd{
+	height:45px;line-height:45px;
+	cursor: pointer;width:85px;color:#ffffff;
+	text-align: center;float:left;margin-left:3px;
+	background-image: url(../images/qidong_but_lan.png)
+}
+.qfgd:hover{
+	background-image: url(../images/qidong_but_huang.png)
+}
+.qfgdStart{
+	height:45px;line-height:45px;
+	cursor: pointer;width:85px;color:#ffffff;
+	text-align: center;float:left;margin-left:3px;
+	background-image: url(../images/qidong_but_lan_lv.png)
+}
+.qfgdStart:hover{
+	background-image: url(../images/qidong_but_huang_lv.png)
+}
+.butRow{
+	position:absolute;
+	height:60px;
+	top:3px;
+	line-height:60px;
+	text-align: center;
+	font-family:'微软雅黑';
+}
+/************************afeng end**********************/
