--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1710,4 +1710,17 @@ footer {
 	text-align: center;
 	font-family:'微软雅黑';
 }
+/*plc*/
+.plc_gongwei{
+	text-align: center;
+	margin-left:2px;
+	line-height:25px;
+	height:25px;
+	width:75px;
+	color:#000000;
+	font-size:12px;
+	cursor:pointer;
+	float:left;
+	background-color:rgb( 234 , 234 , 234 );
+}
 /************************afeng end**********************/
