--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1459,11 +1459,11 @@ footer {
 	height:100%;
 	font-family:'微软雅黑';
 }
-.系统信息{
+.按钮操控{
 	cursor: pointer;width: 100px; height: 100px;
 	background-image: url(../images/xitongshezhi_huise.png);
 }
-.系统信息:hover{
+.按钮操控:hover{
 	background-image: url(../images/xitongshezhi_huangse.png);
 }
 .xtsz_home{
@@ -1522,8 +1522,12 @@ footer {
 	top: 0px; left: 150px; width: 67px; height: 63px;z-index:1000;
 }
 .订单调度{
-	width: 66px; height: 50px; 
-	cursor: pointer; position: relative; top: 245px; left: 59px; 
+	width: 66px; 
+	height: 50px; 
+	cursor: pointer; 
+	position: relative; 
+	top: 245px; 
+	left: 59px; 
 	background-image: url(../images/wuliaodiaodu66x55_huise.png); 
 	background-repeat: no-repeat;
 }
@@ -1531,8 +1535,12 @@ footer {
 	background-image: url(../images/wuliaodiaodu66x55_huangse.png); 
 }
 .主页信息{
-	width: 66px; height: 50px; 
-	cursor: pointer; position: relative; top: 153px; left: 118px; 
+	width:66px; 
+	height:50px; 
+	cursor:pointer; 
+	position: relative; 
+	top: 153px; 
+	left: 118px; 
 	background-image: url(../images/xinxiguanli66x55_huise.png); 
 	background-repeat: no-repeat;
 }
@@ -1540,8 +1548,12 @@ footer {
 	background-image: url(../images/xinxiguanli66x55_huangse.png); 
 }
 .PLC{
-	width: 66px; height: 50px; 
-	cursor: pointer; position: relative; top: 58px; left: 174px; 
+	width: 66px;
+	height: 50px; 
+	cursor: pointer; 
+	position: relative; 
+	top: 58px; 
+	left: 174px; 
 	background-image: url(../images/dingdanguanli66x55_huise.png); 
 	background-repeat: no-repeat;
 }
@@ -1549,8 +1561,12 @@ footer {
 	background-image: url(../images/dingdanguanli66x55_huangse.png); 
 }
 .库房操作{
-	width: 75px; height: 50px;
-	cursor: pointer; position: relative; top: -40px; left: 228px; 
+	width: 75px; 
+	height: 50px;
+	cursor: pointer; 
+	position: relative; 
+	top: -40px; 
+	left: 228px; 
 	background-image: url(../images/kufangcaozuo66x55_huise.png); 
 	background-repeat: no-repeat;
 }
@@ -1558,8 +1574,12 @@ footer {
 	background-image: url(../images/kufangcaozuo66x50_huangse.png); 
 }
 .基础设置{
-	width: 66px; height: 53px; 
-	cursor: pointer; position: relative; top: -130px; left: 285px; 
+	width: 66px; 
+	height: 53px; 
+	cursor: pointer; 
+	position: relative; 
+	top: -130px; 
+	left: 285px; 
 	background-image: url(../images/shezhizhongxin66x55_huise.png); 
 	background-repeat: no-repeat;
 }
