--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1726,6 +1726,7 @@ footer {
 	position:absolute;
 	height:60px;
 	top:3px;
+	width:150px;
 	line-height:60px;
 	text-align: center;
 	font-family:'微软雅黑';
@@ -1754,5 +1755,164 @@ footer {
 	color:#ffffff;
 	background-color:rgb( 75 , 176 , 249 );
 	border:1px solid rgb(137,137,137);
+}
+.shusongxian_base{
+	margin-left:3px;
+	width:50px;
+	line-height:26px;
+	font-size:15px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.huancunku_base{
+	margin-left:3px;
+	width:50px;
+	line-height:54px;
+	font-size:15px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.head_hui_base{
+	text-align: center;
+	float:left;
+	margin-left:3px;
+	height:40px;
+	width:50px;
+	color:#000000;
+	font-size:15px;
+	border:1px solid rgb( 234 , 234 , 234 );
+}
+.hui_base{
+	text-align: center;
+	margin-left:3px;
+	line-height:40px;
+	height:40px;
+	width:50px;
+	float:left;
+	cursor:pointer;
+	color:#000000;
+	font-size:15px;
+	background-color:rgb( 234 , 234 , 234 );
+}
+.lan_base{
+	text-align: center;
+	margin-left:3px;
+	line-height:40px;
+	height:40px;
+	width:50px;
+	float:left;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:15px;
+	background-color:rgb( 75 , 176 , 249 );
+}
+/***plc***/
+.gongweiDiv{
+	margin-left:10px;
+	padding:0;
+	width:235px;
+	height:162px;
+	border:1px solid rgb( 155 , 155 , 155 );
+}
+.gongwei0Div{
+	padding:0;width:235px;height:162px;border:1px solid rgb( 155 , 155 , 155 );
+}
+.gongwei15Div{
+	margin-top:4px;padding:0;width:235px;height:162px;border:1px solid rgb( 155 , 155 , 155 );
+}
+.gwInputLabe{
+	width:48px;padding: 4px 2px 2px 2px;
+}
+.gwInput{
+	padding:0;font-size:10px;width:45px;height:20px;
+}
+.gongweiTable{
+	margin-top:-1px;height:108px;width:230px;
+}
+.gongweiBoolLabe0{
+	width:38px;padding:5px 0 0 0;
+}
+.gongweiBoolLabe{
+	width:33px;padding: 4px 2px 2px 2px;
+}
+.gongweiBool{
+	padding:0;
+	font-size:10px;
+	width:30px;
+	height:20px;
+}
+.gongweiDizhilabe0{
+	width:40px;padding:5px 0 0 0;
+}
+.gongweiDizhilabe{
+	width:73px;padding: 4px 2px 2px 2px;
+}
+.gongweiDizhiInput{
+	font-size:10px;width:70px;height:20px;
+}
+.gongweiXiangMu{
+	width:100px;font-size:12px;
+}
+.gongweiDuiLie1{
+	width:50px;font-size:12px;
+}
+.plcFanHui{
+	margin-top:4px;padding:0;width:450px;height:300px;border:1px solid rgb( 155 , 155 , 155 );
+}
+.plcFanHuiBoolInput{
+	padding:0;font-size:10px;width:35px;height:20px;
+}
+/**订单调度按钮**/
+.ddddAnniu{
+	font-size:14px;
+	font-family:'微软雅黑';
+}
+/*****权限-角色*****/
+/**物料维护**/
+.wlColor{
+	font-size:12px;
+	color:blue;
+}
+/**模组维护 **/
+.mzColor{
+	font-size:12px;
+	color:rgb(255,128,0);
+}
+/**pack**/
+.packColor{
+	font-size:12px;
+	color:rgb(128,128,64);
+}
+/**账户设置**/
+.baseColor{
+	font-size:12px;
+	color:rgb(255,128,192);
+}
+/**库房操作**/
+.kufangColor{
+	font-size:12px;
+	color:rgb(80,160,160);
+}
+/**pcl**/
+.plcColor{
+	font-size:12px;
+	color:rgb(119,0,119);
+}
+/**订单调度**/
+.dingdanColor{
+	font-size:12px;
+	color:rgb(255,0,0);
+}
+/**按钮**/
+.anniuColor{
+	font-size:12px;
+	color:rgb(0,255,64);
+}
+/**按钮样式**/
+.baseAnniu{
+	width:150px;font-size:15px;font-family:'微软雅黑';
+}
+.basedata_tab{
+	line-height:25px;
+	height:25px;
+	font-size:12px;
 }
 /************************afeng end**********************/
