--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1673,6 +1673,18 @@ footer {
 	cursor:pointer;
 	background-color:rgb( 146 , 208 , 80 );
 }
+.kf_red{
+	text-align: center;
+	margin-left:3px;
+	line-height:33px;
+	height:33px;
+	width:40px;
+	float:left;
+	color:#ffffff;
+	font-size:12px;
+	cursor:pointer;
+	background-color:rgb( 244 , 121 , 128 );
+}
 .lan{
 	text-align: center;
 	margin-left:3px;
