--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1907,4 +1907,7 @@ footer {
 	height:25px;
 	font-size:12px;
 }
+.rfid_wl_table{
+	margin-top:5px;height:108px;width:100%;
+}
 /************************afeng end**********************/
