--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1498,8 +1498,12 @@ footer {
 	top: 0px; left: 45px; width: 67px; height: 63px;z-index:1000;
 }
 .div_mo_img_strat{
-	cursor: pointer; position: absolute; 
+	cursor: pointer; position: absolute; display:none;
 	top: 0px; left: 150px; width: 67px; height: 63px;z-index:1000;
+}
+.error{
+	width:69px;height:62px;display:none;position:absolute;
+	left:254px;top:-6px;color:red;cursor:pointer;z-index:1000;
 }
 .订单调度{
 	width: 66px; 
@@ -1898,6 +1902,11 @@ footer {
 	font-size:12px;
 	color:rgb(0,255,64);
 }
+/**按钮**/
+.rfidColor{
+	font-size:12px;
+	color:rgb(0,0,0);
+}
 /**按钮样式**/
 .baseAnniu{
 	width:150px;font-size:15px;font-family:'微软雅黑';
@@ -1909,5 +1918,8 @@ footer {
 }
 .rfid_wl_table{
 	margin-top:5px;height:108px;width:100%;
+}
+.home_mz_list{
+	margin-top:-50px;height:300px;overflow-y:scroll;font-size:12px;margin-left:-120px;
 }
 /************************afeng end**********************/
