--- a/smtcl_erp/WebRoot/css/general.css
+++ b/smtcl_erp/WebRoot/css/general.css
@@ -1497,6 +1497,9 @@ footer {
 	cursor: pointer; position: absolute;
 	top: 0px; left: 45px; width: 67px; height: 63px;z-index:1000;
 }
+.stJhxh{
+	font-size:12px;color:yellow;position: absolute;top: 23px; left: 30px; width: 100px; height: 63px;z-index:1000;
+}
 .div_mo_img_strat{
 	cursor: pointer; position: absolute; display:none;
 	top: 0px; left: 150px; width: 67px; height: 63px;z-index:1000;
